--- a/index.html
+++ b/index.html
@@ -1,11 +1,49 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Jaya Baldwin Portfolio</title>
+    <link rel="stylesheet" type="text/css" href="./assets/css/style.css" />
 </head>
+
+
 <body>
+    <!-- header -->
+    <header>
+        <article class="header-box">
+            <article class="name-links">
+             <h1>Jaya Baldwin</h1>
+        <!-- nav bar -->
+                <nav>
+                    <ul>
+                        <li><button"#get-to-know-me">Get to Know Me</a></li>
+                        <li><a href="#my-work"></a></li>
+                        <li><a href="#lets-chat"></a></li>
+                    </ul>
+                </nav>
+            </article>
+            <p class="p-top">Hi, my name is Jaya...</p>
+            <p class="p-bottom">...nice to meet you</p>
+            <img src="#">
+        </article>
+    </header>
+
+    <main>
+        <section id="get-to-know-me">   
+            <h2>Get to Know Me</h2>
+            <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Perspiciatis culpa sit labore, molestias corporis eaque nostrum, nihil id ex temporibus incidunt sint. Dolore corporis rem quae. Rerum enim dolor corporis.</p>
+        </section> 
+        
+        <section id="my-work">
+            <h2>My Work</h2>
+            <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Error tenetur voluptas provident reiciendis molestiae. Possimus eius ducimus autem perferendis quas, esse quae blanditiis inventore recusandae dolore numquam voluptates magni soluta!</p>
+            <img src
+        </section>
+
+
+    </main>
     
 </body>
 </html>
