--- a/index.html
+++ b/index.html
@@ -9,41 +9,40 @@
     <link rel="stylesheet" type="text/css" href="./assets/css/style.css" />
 </head>
 
-
 <body>
-    <!-- header -->
     <header>
-        <div class="container">
+        <article class="logo">
+            <h1>Jaya Baldwin</h1>
+        </article>
 
-        <!-- logo -->
-        <img src="assets/images/JB.png" alt="logo" class="logo">  
-
-        <!-- nav bar -->
-        <nav>
-            <ul>
-                <li><a href="#get-to-know-me">Get to Know Me</a></li>
-                <li><a href="#my-work"></a>My Work</li>
-                <li><a href="#lets-chat"></a>Contact</li>
-            </ul>
-        </nav>
-
-        </div>
-
-
-        <article class="header-box">
-            <article class="name-links">
-             <h1>Jaya Baldwin</h1>
+        <article class="nav-bar">
+            <nav>
+                <ul>
+                    <li><a href="#">Get to Know Me</a></li>
+                    <li><a href="#">My Work</a></li>
+                    <li><a href="#">Lets Chat</a></li>
+                </ul>
+            </nav>
         
-            </article>
-            <p class="p-top">Hi, my name is Jaya...</p>
-            <p class="p-bottom">...nice to meet you</p>
-            <img src="#">
         </article>
     </header>
 
-    <main>
+    <section>
+        <article class="top-left"></article>
 
-    </main>
+        <article class="top-right"></article>
+    </section>
+
+
+
+
     
+<footer>
+    <h2></h2>
+    <p>&copy; Jaya Baldwin 2023</p>
+</footer>
+
 </body>
+
+
 </html>
