--- a/index.html
+++ b/index.html
@@ -15,19 +15,18 @@
             <h1>Jaya Baldwin</h1>
         </article>
 
-        <article class="nav-bar">
+        <article>
             <nav>
                 <ul>
-                    <li><a href="#">Get to Know Me</a></li>
-                    <li><a href="#">My Work</a></li>
-                    <li><a href="#">Lets Chat</a></li>
+                    <li><a href="#about">Get to Know Me</a></li>
+                    <li><a href="#my-work">My Work</a></li>
+                    <li><a href="#contact">Lets Chat</a></li>
                 </ul>
             </nav>
-        
         </article>
     </header>
 
-    <section>
+    <section class="hero">
         <article class="top-left"></article>
 
         <article class="top-right"></article>
@@ -36,7 +35,7 @@
 
 
 
-    
+
 <footer>
     <h2></h2>
     <p>&copy; Jaya Baldwin 2023</p>
