--- a/index.html
+++ b/index.html
@@ -26,22 +26,32 @@
         </article>
     </header>
 
-    <section class="hero">
+    <article class="hero">
         <article class="top-left"></article>
-
         <article class="top-right"></article>
-    </section>
+    </article>
+
+    <main>
+        <section id="about">
+            <h1 class="content">Get to Know Me</h1>
+                <p>Hi, my name is Jaya...</p>
+                <div>
+                    <p>... nice to meet you.</p>
+                </div>
+        </section>
+        
+    </main>
+
+    
 
 
 
 
-
-<footer>
-    <h2></h2>
-    <p>&copy; Jaya Baldwin 2023</p>
-</footer>
+    <footer>
+        <h2></h2>
+            <p>&copy; Jaya Baldwin 2023</p>
+    </footer>
 
 </body>
-
 
 </html>
