restarted most of project to simplify, now is just html structure and borders to build out wireframe

--- a/index.html
+++ b/index.html
@@ -12,6 +12,125 @@
 
 <body>
     <header>
+        <nav>
+            <ul>
+                <li><a href="#about">Get to Know Me</a></li>
+                <li><a href="#my-work">My Work</a></li>
+                <li><a href="#contact">Lets Chat</a></li>
+            </ul>
+        </nav>
+    </header>
+
+    <article class="title">
+        <h1>Jaya Baldwin</h1>
+        <figure>
+        <img src="./assets/images/neutral-background-2.png" />
+    </article>
+
+<main>
+    <section class="about" id="about">
+        <h2>Get to Know Me</h2>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ratione, voluptas beatae. Ullam optio nisi vitae excepturi, odio deleniti? Voluptate itaque quod eos unde dolore error corporis tempora, voluptates totam earum? Lorem ipsum dolor, sit amet consectetur adipisicing elit. Cupiditate repellat possimus minus odio qui, sunt, saepe hic unde perferendis corporis sequi tempora assumenda? Temporibus culpa maxime corrupti optio? Architecto, dolorem! Lorem ipsum dolor sit amet consectetur adipisicing elit. Obcaecati esse maiores modi explicabo fugiat saepe exercitationem unde vel iste cum aspernatur blanditiis, culpa corporis, dolores hic ducimus. Tenetur, eligendi consequatur.</p>
+        <button><a href="#contact">Contact Me</a></button>
+        </button>
+    </section>
+
+    <section class="my-work">
+        <article class="main-proj" id="my-work">
+            <div>
+                <h2>My Work</h2>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Amet, quo! Veritatis sequi suscipit fugiat eaque, iusto a veniam. Quidem, magnam? Dolore necessitatibus blanditiis aperiam corporis, eius odit enim. Porro, aut.</p>
+            </div>
+            <figure>
+                <img src="#" />
+            </figure>
+        </article>
+
+        <article class="other-proj">
+            <div>
+                <p></p>
+            </div>
+            <article>
+                <figure>
+                    <img src="#" />
+                </figure>
+                <figure>
+                    <img src="#" />
+                </figure>
+                <figure>
+                    <img src="#" />
+                </figure>
+            </article>
+    </section>
+
+    <section class="contact" id="contact">
+        <article class="bottom-left">
+            <h3>Lets chat...</h3>
+        </article>
+
+        <article class="bottom-right">
+            <ul>
+                <li>
+                    <i class="fa-solid fa-phone" style="color: #c27047d0;"></i>
+                    <a href="tel:+6135883361">+61 435 883 361</a></li>
+
+                <li>
+                    <i class="fa-solid fa-envelope" style="color: #c27047d0;"></i>
+                    <a href="tel:+6135883361">jayastarrbaldwin@gmail.com</a></li>
+            </ul>
+        </article>
+    </section>
+</main>
+
+
+</body>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+<!-- 
+<body>
+    <header>
         <article class="logo">
             <img src="./assets/images/logo-placeholder.png" />
         </article>
@@ -33,7 +152,7 @@
     </article>
 
     <main>
-        <section id="about">
+        <section class="about" id="about">
             <h2 class="content">Get to Know Me</h2>
                 <p>Hi, my name is Jaya... Lorem ipsum, dolor sit amet consectetur adipisicing elit. Sit delectus aliquam illo dicta ab, eveniet deleniti nulla. Numquam necessitatibus tempore cumque dolorum accusamus iste! Minima nulla fugiat maxime voluptas iusto.</p>
                 <div>
@@ -43,15 +162,16 @@
                 <button><a href="#contact">Contact Me</a></button>
         </section>
 
-        <section id="my-work">
+        <section class="my-work" id="my-work">
+            <h2>My Work</h2>
             <article class="main-proj">
                 <figure><img src="./assets/images/neutral-placeholder.png" /></figure>
             </article>
 
-            <article class="other-prj">
-                <figure><img src="./assets/images/neutral-placeholder.png" /></figure>
-                <figure><img src="./assets/images/neutral-placeholder.png" /></figure>
-                <figure><img src="./assets/images/neutral-placeholder.png" /></figure>
+            <article class="other-proj">
+                <figure class="projects"></figure>
+                <figure class="projects"></figure>
+                <figure class="projects"></figure>
             </article>
         </section>
 
@@ -88,4 +208,4 @@
 
 </body>
 
-</html>
+</html> -->
