--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
 <body>
     <header>
         <nav>
+            <h2 class="nav-header">JB</h2>
             <ul>
                 <li><a href="#about">Get to Know Me</a></li>
                 <li><a href="#my-work">My Work</a></li>
@@ -21,23 +22,26 @@
         </nav>
     </header>
 
-    <article class="title">
-        <h1>Jaya Baldwin</h1>
-        <figure>
-        <img src="./assets/images/neutral-background-2.png" />
-    </article>
+    <div class="hero-image">
+        <div class="hero-text">
+          <h1>Jaya Baldwin</h1>
+          <p>Words here</p>
+          <button>Contact Me</button>
+        </div>
+      </div>
 
 <main>
     <section class="about" id="about">
         <h2>Get to Know Me</h2>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ratione, voluptas beatae. Ullam optio nisi vitae excepturi, odio deleniti? Voluptate itaque quod eos unde dolore error corporis tempora, voluptates totam earum? Lorem ipsum dolor, sit amet consectetur adipisicing elit. Cupiditate repellat possimus minus odio qui, sunt, saepe hic unde perferendis corporis sequi tempora assumenda? Temporibus culpa maxime corrupti optio? Architecto, dolorem! Lorem ipsum dolor sit amet consectetur adipisicing elit. Obcaecati esse maiores modi explicabo fugiat saepe exercitationem unde vel iste cum aspernatur blanditiis, culpa corporis, dolores hic ducimus. Tenetur, eligendi consequatur.</p>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ratione, voluptas beatae. Ullam optio nisi vitae excepturi, odio deleniti? Voluptate itaque quod eos unde dolore error corporis tempora, voluptates totam earum? </p>
+        <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Cupiditate repellat possimus minus odio qui, sunt, saepe hic unde perferendis corporis sequi tempora assumenda? Temporibus culpa maxime corrupti optio? Architecto, dolorem! Lorem ipsum dolor sit amet consectetur adipisicing elit. Obcaecati esse maiores modi explicabo fugiat saepe exercitationem unde vel iste cum aspernatur blanditiis, culpa corporis, dolores hic ducimus. Tenetur, eligendi consequatur.</p>
         <button><a href="#contact">Contact Me</a></button>
         </button>
     </section>
 
     <section class="my-work">
         <article class="main-proj" id="my-work">
-            <div>
+            <div class="proj-1">
                 <h2>My Work</h2>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Amet, quo! Veritatis sequi suscipit fugiat eaque, iusto a veniam. Quidem, magnam? Dolore necessitatibus blanditiis aperiam corporis, eius odit enim. Porro, aut.</p>
             </div>
@@ -50,7 +54,7 @@
             <div>
                 <p></p>
             </div>
-            <article>
+            <article class="small-proj">
                 <figure>
                     <img src="#" />
                 </figure>
