new fonts and color palette

--- a/index.html
+++ b/index.html
@@ -7,14 +7,19 @@
     <title>Jaya Baldwin Portfolio</title>
     <link rel="stylesheet" type="text/css" href="./assets/css/reset.css" />
     <link rel="stylesheet" type="text/css" href="./assets/css/style.css" />
+
+    <!-- Icons -->
     <script src="https://kit.fontawesome.com/503423f4ed.js" crossorigin="anonymous"></script>
+    
+    <!-- Fonts -->
+    <style>@import url('https://fonts.googleapis.com/css2?family=Inter+Tight:wght@200&family=Unna:ital@0;1&display=swap');</style>
 </head>
 
 <body>
     <header>
         <nav>
-            <h2 class="nav-header">JB</h2>
-            <ul>
+            <!-- <h2 class="nav-header">JB</h2> -->
+            <ul id="primary-navigation" class="primary-navigation flex">
                 <li><a href="#about">Get to Know Me</a></li>
                 <li><a href="#my-work">My Work</a></li>
                 <li><a href="#contact">Lets Chat</a></li>
@@ -24,7 +29,7 @@
 
     <div class="hero-image">
         <div class="hero-text">
-          <h1>Jaya Baldwin</h1>
+          <h1>JAYA BALDWIN</h1>
           <p>Words here</p>
           <button>Contact Me</button>
         </div>
@@ -35,8 +40,7 @@
         <h2>Get to Know Me</h2>
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ratione, voluptas beatae. Ullam optio nisi vitae excepturi, odio deleniti? Voluptate itaque quod eos unde dolore error corporis tempora, voluptates totam earum? </p>
         <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Cupiditate repellat possimus minus odio qui, sunt, saepe hic unde perferendis corporis sequi tempora assumenda? Temporibus culpa maxime corrupti optio? Architecto, dolorem! Lorem ipsum dolor sit amet consectetur adipisicing elit. Obcaecati esse maiores modi explicabo fugiat saepe exercitationem unde vel iste cum aspernatur blanditiis, culpa corporis, dolores hic ducimus. Tenetur, eligendi consequatur.</p>
-        <button><a href="#contact">Contact Me</a></button>
-        </button>
+        <p class="fancy">... nice to meet you.</p>
     </section>
 
     <section class="my-work">
