button css added and padding

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
         <div class="container">
             <a href="#"><img src="./assets/images/Favicon.svg" alt="logo" /></a>
 
-             <nav class="primary-navigation">
+             <nav class="primary-nav">
                  <ul role="list" class="nav-list">
                     <li><a href="#about">Get to Know Me</a></li>
                     <li><a href="#my-work">My Work</a></li>
@@ -42,10 +42,12 @@
 
 <main>
     <section class="about" id="about">
-        <h2>Get to Know Me</h2>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ratione, voluptas beatae. Ullam optio nisi vitae excepturi, odio deleniti? Voluptate itaque quod eos unde dolore error corporis tempora, voluptates totam earum? </p>
-        <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Cupiditate repellat possimus minus odio qui, sunt, saepe hic unde perferendis corporis sequi tempora assumenda? Temporibus culpa maxime corrupti optio? Architecto, dolorem! Lorem ipsum dolor sit amet consectetur adipisicing elit. Obcaecati esse maiores modi explicabo fugiat saepe exercitationem unde vel iste cum aspernatur blanditiis, culpa corporis, dolores hic ducimus. Tenetur, eligendi consequatur.</p>
-        <p class="fancy">... nice to meet you.</p>
+        <article class="about">
+            <h2>Get to Know Me</h2>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ratione, voluptas beatae. Ullam optio nisi vitae excepturi, odio deleniti? Voluptate itaque quod eos unde dolore error corporis tempora, voluptates totam earum? </p>
+                <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Cupiditate repellat possimus minus odio qui, sunt, saepe hic unde perferendis corporis sequi tempora assumenda? Temporibus culpa maxime corrupti optio? Architecto, dolorem! Lorem ipsum dolor sit amet consectetur adipisicing elit. Obcaecati esse maiores modi explicabo fugiat saepe exercitationem unde vel iste cum aspernatur blanditiis, culpa corporis, dolores hic ducimus. Tenetur, eligendi consequatur.</p>
+                <p class="fancy">... nice to meet you.</p>
+        </article>
     </section>
 
     <section class="my-work" id="my-work">
@@ -56,17 +58,17 @@
                 <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Et consequatur quaerat sunt hic nisi facilis temporibus doloremque possimus beatae, dignissimos asperiores eveniet nam nostrum libero iure aperiam vel quam animi.</p>
                 </div>
                 <div>
-                <img src="#" alt="main project">    
+                <img src="./assets/images/500px.png" alt="main project">    
                 </div>    
             </div>
         </div>
 
         <article class="container">
-            <div class="multi-columns">
+            <div class="even-columns">
                 <div class="other-proj">
-                <figure><img src="#" /></figure>
-                <figure><img src="#" /></figure>
-                <figure><img src="#" /></figure>
+                <figure><img src="./assets/images/250px.png" /></figure>
+                <figure><img src="./assets/images/250px.png" /></figure>
+                <figure><img src="./assets/images/250px.png" /></figure>
                 </div>
             </div>
         </article>
@@ -80,8 +82,8 @@
                 <h3>Contact Me</h3> 
                 </div>
                 <div>
-                    <nav class="secondary-navigation">
-                        <ul>
+                    <nav class="secondary-nav">
+                        <ul role="list" class="nav-list">
                             <li>
                                 <i class="fa-solid fa-phone" style="color: #c27047d0;"></i>
                                 <a href="tel:+6135883361">+61 435 883 361</a></li>
