start of nav bar

--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
     <header class="primary-header">
         <div class="container">
             <a href="#"><img src="./assets/images/Favicon.svg" alt="logo" /></a>
+                <button class="mobile-nav-toggle">Burger</button>
 
              <nav class="primary-nav">
                  <ul role="list" class="nav-list">
@@ -35,15 +36,15 @@
     <div class="hero-image">
         <div class="hero-text">
           <h1>JAYA BALDWIN</h1>
-          <p>Words here</p>
-          <button>Contact Me</button>
+          <p>novice web developer</p>
+          <a href="#contact"><button>Contact Me</button></a>
         </div>
       </div>
 
 <main>
     <section class="about" id="about">
         <article class="about">
-            <h2>Get to Know Me</h2>
+            <h2>Welcome... my name is Jaya</h2>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ratione, voluptas beatae. Ullam optio nisi vitae excepturi, odio deleniti? Voluptate itaque quod eos unde dolore error corporis tempora, voluptates totam earum? </p>
                 <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Cupiditate repellat possimus minus odio qui, sunt, saepe hic unde perferendis corporis sequi tempora assumenda? Temporibus culpa maxime corrupti optio? Architecto, dolorem! Lorem ipsum dolor sit amet consectetur adipisicing elit. Obcaecati esse maiores modi explicabo fugiat saepe exercitationem unde vel iste cum aspernatur blanditiis, culpa corporis, dolores hic ducimus. Tenetur, eligendi consequatur.</p>
                 <p class="fancy">... nice to meet you.</p>
@@ -73,15 +74,16 @@
             </div>
         </article>
     </section>
+</main>
 
 <!-- contact section -->
-    <section class="contact" id="contact">
+    <footer class="contact" id="contact">
         <div class="container">
             <div class="even-columns">
-                <div>
+                <div class="left-side">
                 <h3>Contact Me</h3> 
                 </div>
-                <div>
+                <div class="right-side">
                     <nav class="secondary-nav">
                         <ul role="list" class="nav-list">
                             <li>
@@ -96,7 +98,7 @@
                 </div>    
             </div>
         </div>
-    </section>
+    </footer>
 
 
 
@@ -143,7 +145,6 @@
             </ul> -->
         <!-- </article>
    -->
-</main>
 </body>
 
 
