--- a/index.html
+++ b/index.html
@@ -13,13 +13,30 @@
     
     <!-- Fonts -->
     <style>
-        @import url('https://fonts.googleapis.com/css2?family=Bodoni+Moda:ital,opsz,wght@0,6..96,500;1,6..96,400&family=Inter+Tight:wght@200&family=Unna:ital@0;1&display=swap');
-      </style>
+        @import url('https://fonts.googleapis.com/css2?family=Bodoni+Moda:ital,opsz,wght@0,6..96,500;1,6..96,400&family=Inter+Tight:wght@200;400;500&family=Unna:ital@0;1&display=swap');
+        </style>
+        
 </head>
 
 <body>
     <header class="primary-header">
-        <div class="container">
+             <nav>
+                <img src="./assets/images/Favicon.svg" alt="logo" class="logo" />
+                <input type="checkbox" id="hamburger" />
+                <label for ="hamburger">
+                    <i class="fa-solid fa-bars" style="color: #CC6A46;"></i>
+                </label>
+                 <ul>
+                    <li><a href="#about">Get to Know Me</a></li>
+                    <li><a href="#my-work">My Work</a></li>
+                    <li><a href="#contact">Lets Chat</a></li>
+                </ul>
+            </nav>
+        </article>
+    </header>
+<!-- 
+    <header class="primary-header">
+        <div>
             <a href="#"><img src="./assets/images/Favicon.svg" alt="logo" /></a>
                 <button class="mobile-nav-toggle">Burger</button>
 
@@ -31,7 +48,7 @@
                 </ul>
             </nav>
         </div>
-    </header>
+    </header> -->
 
     <div class="hero-image">
         <div class="hero-text">
@@ -44,8 +61,8 @@
 <main>
     <section class="about" id="about">
         <article class="about">
-            <h2>Welcome... my name is Jaya</h2>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ratione, voluptas beatae. Ullam optio nisi vitae excepturi, odio deleniti? Voluptate itaque quod eos unde dolore error corporis tempora, voluptates totam earum? </p>
+            <h2>Hi... my name is Jaya</h2>
+                <p>I am 23 years old and from Byron Bay. </p>
                 <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Cupiditate repellat possimus minus odio qui, sunt, saepe hic unde perferendis corporis sequi tempora assumenda? Temporibus culpa maxime corrupti optio? Architecto, dolorem! Lorem ipsum dolor sit amet consectetur adipisicing elit. Obcaecati esse maiores modi explicabo fugiat saepe exercitationem unde vel iste cum aspernatur blanditiis, culpa corporis, dolores hic ducimus. Tenetur, eligendi consequatur.</p>
                 <p class="fancy">... nice to meet you.</p>
         </article>
