added rows and columns outlines for website structure and integrity

--- a/index.html
+++ b/index.html
@@ -59,16 +59,53 @@
       </div>
 
 <main>
-    <section class="about" id="about">
-        <article class="about">
-            <h2>Hi... my name is Jaya</h2>
+    <section class="main-row" id="about">
+            <div class="main-headline">
+                <h2>About</h2>
+            </div>
+            <div class="main-content">
                 <p>I am 23 years old and from Byron Bay. </p>
                 <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Cupiditate repellat possimus minus odio qui, sunt, saepe hic unde perferendis corporis sequi tempora assumenda? Temporibus culpa maxime corrupti optio? Architecto, dolorem! Lorem ipsum dolor sit amet consectetur adipisicing elit. Obcaecati esse maiores modi explicabo fugiat saepe exercitationem unde vel iste cum aspernatur blanditiis, culpa corporis, dolores hic ducimus. Tenetur, eligendi consequatur.</p>
                 <p class="fancy">... nice to meet you.</p>
-        </article>
+            </div>
     </section>
 
-    <section class="my-work" id="my-work">
+    <section class="main-row" id="about">
+        <div class="main-headline">
+            <h2>Projects</h2>
+        </div>
+        <div class="main-content">
+            <p>I am 23 years old and from Byron Bay. </p>
+            <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Cupiditate repellat possimus minus odio qui, sunt, saepe hic unde perferendis corporis sequi tempora assumenda? Temporibus culpa maxime corrupti optio? Architecto, dolorem! Lorem ipsum dolor sit amet consectetur adipisicing elit. Obcaecati esse maiores modi explicabo fugiat saepe exercitationem unde vel iste cum aspernatur blanditiis, culpa corporis, dolores hic ducimus. Tenetur, eligendi consequatur.</p>
+            <p class="fancy">... nice to meet you.</p>
+        </div>
+</section>
+
+<section class="main-row" id="about">
+    <div class="main-headline">
+        <h2>My Work</h2>
+    </div>
+    <div class="main-content">
+        <div class="work-row">
+            <div class="work-column">
+                <img src="./assets/images/byron.jpeg">
+                <h2>Project 1</h2>
+            </div>
+        </div>
+        <div class="work-row">
+            <div class="work-column">
+                <img src="./assets/images/byron.jpeg">
+                <h2>Project 1</h2>
+            </div>
+            <div class="work-column">
+                <img src="./assets/images/byron.jpeg">
+                <h2>Project 1</h2>
+            </div>
+        </div>
+    </div>
+</section>
+
+    <!-- <section class="my-work" id="my-work">
         <article class="container">
             <div class="even-columns">
                 <div class="main-proj">
@@ -79,7 +116,7 @@
                 <img src="./assets/images/500px.png" alt="main project">    
                 </div>    
             </div>
-        </div>
+        </div> -->
 
         <article class="container">
             <div class="even-columns">
@@ -101,7 +138,6 @@
                 <h3>Contact Me</h3> 
                 </div>
                 <div class="right-side">
-                    <nav class="secondary-nav">
                         <ul role="list" class="nav-list">
                             <li>
                                 <i class="fa-solid fa-phone" style="color: #c27047d0;"></i>
@@ -111,7 +147,6 @@
                                 <i class="fa-solid fa-envelope" style="color: #c27047d0;"></i>
                                 <a href="tel:+6135883361">jayastarrbaldwin@gmail.com</a></li>
                         </ul>
-                    </nav>
                 </div>    
             </div>
         </div>
