redid html and added placeholderm fixed nav bar, made majority of sections into flex boxes

--- a/index.html
+++ b/index.html
@@ -34,6 +34,87 @@
             </nav>
         </article>
     </header>
+
+
+    <div class="hero">
+        <div class="hero-content">
+          <h1>JAYA BALDWIN</h1>
+          <p>novice web developer</p>
+        </div>
+        <div class="hero-img">
+          <img src="assets/images/profile-circle.png">
+        </div>
+        <div>
+          <a href="#contact"><button>Contact Me</button></a>
+        </div>
+    </div>
+
+<main>
+    <section class="main-row" id="about">
+            <div class="main-headline">
+                <h2>About</h2>
+            </div>
+            <div class="main-content">
+                <p class="fancy">Hi... my name is Jaya.</p>
+                <p>I am 23 years old and from Byron Bay. </p>
+                <p>A few years ago I dabbled in web design, which I loved. However, it's what's underneath the design, that most people are hardly aware of, that fascinates me the most. The “how?” of it all. So much is happening that we can’t see, and to understand all the complexities, be able to apply that to my work and acquire the skills to build limitless applications is end game.</p>
+                <p>Anyways, outside of all that, I love spending time with my boyfriend and family, being an overly competitive board game participant and trying to stay upright on my roller skates. Just getting outdoors and going for walks makes me extremely happy… not that I’ve been seeing much of the outside world since the commencement of this course haha. At this point I’m just incredibly thankful for investing in a comfy chair.</p>
+                <p>I’m excited to keep learning, every day, in the ever-changing and evolving tech field.</p>
+                <p class="fancy">P.S. once I learn more and remove the placeholders, I'll write a more professional about me section... promise.</p>
+            </div>
+    </section>
+
+
+<section class="main-row" id="my-work">
+    <div class="main-headline">
+        <h2>My Work</h2>
+    </div>
+    <div class="main-content">
+        <div class="work-row">
+            <div class="work-column">
+                <img src="./assets/images/byron.jpeg">
+                <h2>Project 1</h2>
+            </div>
+        </div>
+        <div class="work-row">
+            <div class="work-column">
+                <img src="./assets/images/byron.jpeg">
+                <h2>Project 2</h2>
+            </div>
+            <div class="work-column">
+                <img src="./assets/images/byron.jpeg">
+                <h2>Project 3</h2>
+            </div>
+            <div class="work-column">
+                <img src="./assets/images/byron.jpeg">
+                <h2>Project 4</h2>
+            </div>
+        </div>
+    </div>
+</section>
+
+<footer class="footer-row" id="contact">
+    <div class="left-column">
+        <h2 class="fancy">Contact Me</h2>
+    </div>
+    <div class="right-column">
+        <ul class="navlist">
+            <li>
+                <i class="fa-solid fa-phone" style="color: #c27047d0;"></i>
+                <a href="tel:+6135883361">Feel free to call, text...</a></li>
+
+            <li>
+                <i class="fa-solid fa-envelope" style="color: #c27047d0;"></i>
+                <a href="mailto: jayastarrbaldwin@gmail.com">... or send an email</a></li>
+        </ul>
+    </div>
+</footer>
+    
+
+
+
+
+
 <!-- 
     <header class="primary-header">
         <div>
@@ -50,27 +131,7 @@
         </div>
     </header> -->
 
-    <div class="hero-image">
-        <div class="hero-text">
-          <h1>JAYA BALDWIN</h1>
-          <p>novice web developer</p>
-          <a href="#contact"><button>Contact Me</button></a>
-        </div>
-      </div>
-
-<main>
-    <section class="main-row" id="about">
-            <div class="main-headline">
-                <h2>About</h2>
-            </div>
-            <div class="main-content">
-                <p>I am 23 years old and from Byron Bay. </p>
-                <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Cupiditate repellat possimus minus odio qui, sunt, saepe hic unde perferendis corporis sequi tempora assumenda? Temporibus culpa maxime corrupti optio? Architecto, dolorem! Lorem ipsum dolor sit amet consectetur adipisicing elit. Obcaecati esse maiores modi explicabo fugiat saepe exercitationem unde vel iste cum aspernatur blanditiis, culpa corporis, dolores hic ducimus. Tenetur, eligendi consequatur.</p>
-                <p class="fancy">... nice to meet you.</p>
-            </div>
-    </section>
-
-    <section class="main-row" id="about">
+    <!-- <section class="main-row" id="about">
         <div class="main-headline">
             <h2>Projects</h2>
         </div>
@@ -79,58 +140,10 @@
             <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Cupiditate repellat possimus minus odio qui, sunt, saepe hic unde perferendis corporis sequi tempora assumenda? Temporibus culpa maxime corrupti optio? Architecto, dolorem! Lorem ipsum dolor sit amet consectetur adipisicing elit. Obcaecati esse maiores modi explicabo fugiat saepe exercitationem unde vel iste cum aspernatur blanditiis, culpa corporis, dolores hic ducimus. Tenetur, eligendi consequatur.</p>
             <p class="fancy">... nice to meet you.</p>
         </div>
-</section>
+</section> -->
 
-<section class="main-row" id="about">
-    <div class="main-headline">
-        <h2>My Work</h2>
-    </div>
-    <div class="main-content">
-        <div class="work-row">
-            <div class="work-column">
-                <img src="./assets/images/byron.jpeg">
-                <h2>Project 1</h2>
-            </div>
-        </div>
-        <div class="work-row">
-            <div class="work-column">
-                <img src="./assets/images/byron.jpeg">
-                <h2>Project 1</h2>
-            </div>
-            <div class="work-column">
-                <img src="./assets/images/byron.jpeg">
-                <h2>Project 1</h2>
-            </div>
-        </div>
-    </div>
-</section>
-
-    <!-- <section class="my-work" id="my-work">
-        <article class="container">
-            <div class="even-columns">
-                <div class="main-proj">
-                <h2>My Work</h2> 
-                <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Et consequatur quaerat sunt hic nisi facilis temporibus doloremque possimus beatae, dignissimos asperiores eveniet nam nostrum libero iure aperiam vel quam animi.</p>
-                </div>
-                <div>
-                <img src="./assets/images/500px.png" alt="main project">    
-                </div>    
-            </div>
-        </div> -->
-
-        <article class="container">
-            <div class="even-columns">
-                <div class="other-proj">
-                <figure><img src="./assets/images/250px.png" /></figure>
-                <figure><img src="./assets/images/250px.png" /></figure>
-                <figure><img src="./assets/images/250px.png" /></figure>
-                </div>
-            </div>
-        </article>
-    </section>
-</main>
-
-<!-- contact section -->
+<!-- 
+contact section
     <footer class="contact" id="contact">
         <div class="container">
             <div class="even-columns">
@@ -150,7 +163,7 @@
                 </div>    
             </div>
         </div>
-    </footer>
+    </footer> -->
 
 
 
