structured hero section and settled on layout

--- a/index.html
+++ b/index.html
@@ -41,10 +41,8 @@
           <h1>JAYA BALDWIN</h1>
           <p>novice web developer</p>
         </div>
-        <div class="hero-img">
-          <img src="assets/images/profile-circle.png">
-        </div>
-        <div>
+        <div class="me">
+          <img class="hero-img" src="assets/images/profile-circle.png" alt="profile-picture">
           <a href="#contact"><button>Contact Me</button></a>
         </div>
     </div>
