placeholder project images

--- a/index.html
+++ b/index.html
@@ -70,21 +70,22 @@
     <div class="main-content">
         <div class="work-row">
             <div class="work-column">
-                <img src="./assets/images/byron.jpeg">
-                <h2>Project 1</h2>
+                <img src="./assets/images/pawel-czerwinski-dgJT71cXlC4-unsplash.jpg">
+                <h2>Prework Study Guide</h2>
+                <h3>HTML + CSS</h3>
             </div>
         </div>
         <div class="work-row">
             <div class="work-column">
-                <img src="./assets/images/byron.jpeg">
+                <img src="./assets/images/annie-spratt-g5DkG2ZF7ZY-unsplash.jpg">
                 <h2>Project 2</h2>
             </div>
             <div class="work-column">
-                <img src="./assets/images/byron.jpeg">
+                <img src="./assets/images/neutral-placeholder.png">
                 <h2>Project 3</h2>
             </div>
             <div class="work-column">
-                <img src="./assets/images/byron.jpeg">
+                <img src="./assets/images/scott-webb-R5fIqR8nPu0-unsplash.jpg">
                 <h2>Project 4</h2>
             </div>
         </div>
