--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
         </div>
         <div class="me">
           <img class="hero-img" src="assets/images/profile-circle.png" alt="profile-picture">
-          <a href="#contact"><button>Contact Me</button></a>
+          <a href="https://github.com/jayabaldwin"><button>GitHub?</button></a>
         </div>
     </div>
 
@@ -91,6 +91,7 @@
         </div>
     </div>
 </section>
+</main>
 
 <footer class="footer-row" id="contact">
     <div class="left-column">
@@ -109,106 +110,6 @@
     </div>
 </footer>
     
-
-
-
-
-
-<!-- 
-    <header class="primary-header">
-        <div>
-            <a href="#"><img src="./assets/images/Favicon.svg" alt="logo" /></a>
-                <button class="mobile-nav-toggle">Burger</button>
-
-             <nav class="primary-nav">
-                 <ul role="list" class="nav-list">
-                    <li><a href="#about">Get to Know Me</a></li>
-                    <li><a href="#my-work">My Work</a></li>
-                    <li><a href="#contact">Lets Chat</a></li>
-                </ul>
-            </nav>
-        </div>
-    </header> -->
-
-    <!-- <section class="main-row" id="about">
-        <div class="main-headline">
-            <h2>Projects</h2>
-        </div>
-        <div class="main-content">
-            <p>I am 23 years old and from Byron Bay. </p>
-            <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Cupiditate repellat possimus minus odio qui, sunt, saepe hic unde perferendis corporis sequi tempora assumenda? Temporibus culpa maxime corrupti optio? Architecto, dolorem! Lorem ipsum dolor sit amet consectetur adipisicing elit. Obcaecati esse maiores modi explicabo fugiat saepe exercitationem unde vel iste cum aspernatur blanditiis, culpa corporis, dolores hic ducimus. Tenetur, eligendi consequatur.</p>
-            <p class="fancy">... nice to meet you.</p>
-        </div>
-</section> -->
-
-<!-- 
-contact section
-    <footer class="contact" id="contact">
-        <div class="container">
-            <div class="even-columns">
-                <div class="left-side">
-                <h3>Contact Me</h3> 
-                </div>
-                <div class="right-side">
-                        <ul role="list" class="nav-list">
-                            <li>
-                                <i class="fa-solid fa-phone" style="color: #c27047d0;"></i>
-                                <a href="tel:+6135883361">+61 435 883 361</a></li>
-            
-                            <li>
-                                <i class="fa-solid fa-envelope" style="color: #c27047d0;"></i>
-                                <a href="tel:+6135883361">jayastarrbaldwin@gmail.com</a></li>
-                        </ul>
-                </div>    
-            </div>
-        </div>
-    </footer> -->
-
-
-
-
-
-<!--        
-
-    <article class="main-proj" id="my-work">
-            <div class="proj-1">
-                <h2>My Work</h2>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Amet, quo! Veritatis sequi suscipit fugiat eaque, iusto a veniam. Quidem, magnam? Dolore necessitatibus blanditiis aperiam corporis, eius odit enim. Porro, aut.</p>
-            </div>
-            <figure><img src="#" /></figure>
-        </article>
-
-        <article class="other-proj">
-            <div>
-                <p></p>
-            </div>
-            <article class="small-proj">
-                <figure><img src="#" /></figure>
-                <figure>
-                    <img src="#" />
-                </figure>
-                <figure>
-                    <img src="#" />
-                </figure>
-            </article>
-    </section>
-
-        <article class="bottom-left">
-            <h3>Lets chat...</h3>
-        </article>
-
-        <article class="bottom-right">
-            <ul>
-                <li>
-                    <i class="fa-solid fa-phone" style="color: #c27047d0;"></i>
-                    <a href="tel:+6135883361">+61 435 883 361</a></li>
-
-                <li>
-                    <i class="fa-solid fa-envelope" style="color: #c27047d0;"></i>
-                    <a href="tel:+6135883361">jayastarrbaldwin@gmail.com</a></li>
-            </ul> -->
-        <!-- </article>
-   -->
 </body>
 
 
