cleaning up resposivity on titles

--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
           <h1>JAYA BALDWIN</h1>
           <p>amateur web developer</p>
         </div>
-        <div class="me">
+        <div class="profile">
           <img class="hero-img" src="assets/images/profile-circle.png" alt="profile-picture">
           <a href="https://github.com/jayabaldwin"><button>GitHub?</button></a>
         </div>
